Fixed the images that were being stretched on iphones

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -34,9 +34,10 @@
   position: relative;
 }
 
-.product-card-img {
-  max-height: 20rem;
-  width: fit-content;
+.product-card-img-capsul {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   padding: 2rem 0;
